Update Revera execise

--- a/Week 3/Day 1/Revera/index.html
+++ b/Week 3/Day 1/Revera/index.html
@@ -12,11 +12,19 @@
 	<header>
 		<div class="container-fluid">
   			<div class="row nav">
-  				<div class="col-sm-2 logo">
+  				<div class="col-sm-2 logo text-uppercase">
   				Revera
   				</div>
   				<div class="col-sm-10">
-  				Nav Bar
+  				  <ul>
+              <li>Home</li>
+              <li>About</li>
+              <li>Sample Page</li>
+              <li>Portfolio</li>
+              <li>Blog</li>
+              <li>Parent Page</li>
+              <li>Contact</li>
+            </ul>
   				</div>
   			</div>
   		</div>
@@ -25,14 +33,8 @@
   	<section>
   		<div class="container-fluid">
   			<div class="row slideshow">
-  				<div class="col-sm-1">
-  				arrow
-  				</div>
-  				<div class="col-sm-10">
-  				picture
-  				</div>
-  				<div class="col-sm-1">
-  				arrow
+  				<div class="col-sm-12">
+  				  <img src="http://www.urbandogtraining.com.au/user/Image/French%20Bulldogs%20Cropped.jpg" alt="Three puppies" class="main-img">
   				</div>
   			</div>
   		</div>
@@ -41,8 +43,8 @@
   	<section>
   		<div class="container-fluid">
   			<div class="row red-section">
-  				<div class="col-sm-4">
-  				Web Design
+  				<div class="col-sm-4 design">
+  				<span class="glyphicon glyphicon-glass design-logo" aria-hidden="true"></span>
   				</div>
   				<div class="col-sm-4">
   				Web Design
